fixed font alignment in mobile view

--- a/components/ContentFormat/WorkerSection/WorkerSection.module.css
+++ b/components/ContentFormat/WorkerSection/WorkerSection.module.css
@@ -138,9 +138,6 @@
   .textContainer {
     margin-top: 10px;
     padding: 0 20px;
-  }
-
-  .textContainer h2 {
     text-align: center;
   }
 }
